# dyndump

./: .gitignore  .goreleaser.yaml  .goreleaser_hook.sh  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yaml
src/: dynamics.rs  main.rs
utils/: checkaccess.py
