[package]
name = "dyndump"
version = "0.1.2"
edition = "2021"
authors = ["Irate-Walrus"]
description = "Dump dynamics CRM by Irate Walrus"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
clap-verbosity = "2.1.0"
env_logger = "0.11.8"
jiff = "0.2.18"
reqwest = { version = "0.13.1", features = [
	"json",
	"socks",
	"default-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
